--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "nanoid": "^4.0.0",
     "pino": "^8.0.0",
     "pino-pretty": "^8.0.0",
+    "uuid": "^8.3.2",
     "zod": "^3.17.3"
   },
   "devDependencies": {
@@ -35,6 +36,7 @@
     "@types/nanoid": "^3.0.0",
     "@types/node": "^17.0.43",
     "@types/pino": "^7.0.5",
+    "@types/uuid": "^8.3.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.3"
   }
