--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "ts-node-dev --respawn --transpile-only src/app.ts"
   },
   "author": "",
@@ -19,7 +19,6 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.3.8",
-    "nanoid": "^4.0.0",
     "pino": "^8.0.0",
     "pino-pretty": "^8.0.0",
     "uuid": "^8.3.2",
@@ -31,12 +30,17 @@
     "@types/config": "^0.0.41",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jest": "^28.1.2",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/lodash": "^4.14.182",
     "@types/nanoid": "^3.0.0",
     "@types/node": "^17.0.43",
     "@types/pino": "^7.0.5",
+    "@types/supertest": "^2.0.12",
     "@types/uuid": "^8.3.4",
+    "jest": "^28.1.1",
+    "supertest": "^6.2.3",
+    "ts-jest": "^28.0.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.3"
   }
