--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "vitest",
     "start": "ts-node-dev --respawn --transpile-only src/app.ts"
   },
   "author": "",
@@ -30,7 +30,6 @@
     "@types/config": "^0.0.41",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
-    "@types/jest": "^28.1.2",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/lodash": "^4.14.182",
     "@types/nanoid": "^3.0.0",
@@ -38,10 +37,9 @@
     "@types/pino": "^7.0.5",
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^8.3.4",
-    "jest": "^28.1.1",
     "supertest": "^6.2.3",
-    "ts-jest": "^28.0.5",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.7.3"
+    "typescript": "^4.7.3",
+    "vitest": "^0.15.1"
   }
 }
