--- a/server/package.json
+++ b/server/package.json
@@ -4,23 +4,26 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "vitest",
+    "test": "jest --detectOpenHandles",
     "start": "ts-node-dev --respawn --transpile-only src/app.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/jest": "^28.1.2",
     "add": "^2.0.6",
     "bcrypt": "^5.0.1",
     "config": "^3.3.7",
     "cors": "^2.8.5",
     "dayjs": "^1.11.3",
     "express": "^4.18.1",
+    "jest": "^28.1.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.3.8",
     "pino": "^8.0.0",
     "pino-pretty": "^8.0.0",
+    "ts-jest": "^28.0.5",
     "uuid": "^8.3.2",
     "zod": "^3.17.3"
   },
@@ -39,7 +42,6 @@
     "@types/uuid": "^8.3.4",
     "supertest": "^6.2.3",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.7.3",
-    "vitest": "^0.15.1"
+    "typescript": "^4.7.3"
   }
 }
