--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --detectOpenHandles",
+    "test": "vitest",
     "start": "ts-node-dev --respawn --transpile-only src/app.ts"
   },
   "author": "",
@@ -17,13 +17,11 @@
     "cors": "^2.8.5",
     "dayjs": "^1.11.3",
     "express": "^4.18.1",
-    "jest": "^28.1.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.3.8",
     "pino": "^8.0.0",
     "pino-pretty": "^8.0.0",
-    "ts-jest": "^28.0.5",
     "uuid": "^8.3.2",
     "zod": "^3.17.3"
   },
@@ -40,8 +38,10 @@
     "@types/pino": "^7.0.5",
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^8.3.4",
+    "mongodb-memory-server": "^8.7.0",
     "supertest": "^6.2.3",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.7.3"
+    "typescript": "^4.7.3",
+    "vitest": "^0.15.1"
   }
 }
