--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/jest": "^28.1.2",
     "add": "^2.0.6",
     "bcrypt": "^5.0.1",
     "config": "^3.3.7",
@@ -33,6 +32,7 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/lodash": "^4.14.182",
+    "@types/mongoose": "^5.11.97",
     "@types/nanoid": "^3.0.0",
     "@types/node": "^17.0.43",
     "@types/pino": "^7.0.5",
@@ -42,6 +42,6 @@
     "supertest": "^6.2.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.3",
-    "vitest": "^0.15.1"
+    "vitest": "^0.15.2"
   }
 }
